--- a/tx.html
+++ b/tx.html
@@ -74,7 +74,7 @@
       document.getElementById('chart').innerHTML = svg;
 
       // Optional: show generated Mermaid for debugging
-      document.getElementById('debug').innerHTML =
+      // document.getElementById('debug').innerHTML =
         '<h3>Generated Mermaid</h3><pre>' +
         mer.replace(/[&<>]/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[s])) +
         '</pre>';
