--- a/tx.html
+++ b/tx.html
@@ -75,9 +75,9 @@
 
       // Optional: show generated Mermaid for debugging
       // document.getElementById('debug').innerHTML =
-        '<h3>Generated Mermaid</h3><pre>' +
-        mer.replace(/[&<>]/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[s])) +
-        '</pre>';
+      //  '<h3>Generated Mermaid</h3><pre>' +
+      //  mer.replace(/[&<>]/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[s])) +
+      //  '</pre>';
     }
 
     main().catch(err => {
