--- a/tx.html
+++ b/tx.html
@@ -1,47 +1,61 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Texas Flow (Live from YAML)</title>
+  <title>Texas Filing Flow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- libs -->
   <script src="https://cdn.jsdelivr.net/npm/js-yaml@4/dist/js-yaml.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 24px; }
-    #chart { border: 1px solid #ddd; padding: 12px; border-radius: 8px; }
-    .error { color: #b00020; white-space: pre-wrap; }
-    pre { background: #f7f7f7; padding: 12px; border-radius: 6px; overflow: auto; }
+    :root { --card:#fff; --ink:#111; --muted:#666; --border:#e5e7eb; }
+    html,body { margin:0; padding:0; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:var(--ink); }
+    .wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
+    h1 { font-size: 1.25rem; margin: 0 0 12px; font-weight: 600; }
+    .card { background: var(--card); border:1px solid var(--border); border-radius:12px; padding:16px; }
+    #chart svg { width: 100% !important; height: auto !important; }
+    .foot { margin-top:10px; color:var(--muted); font-size: .85rem; }
+    .error { color:#b00020; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>Texas Filing Flow</h1>
-  <div id="chart">Loading…</div>
-  <div id="debug"></div>
+  <div class="wrap">
+    <h1>Texas Filing Flow</h1>
+    <div id="chart" class="card">Loading…</div>
+    <div class="foot">Source: <span id="src"></span></div>
+  </div>
 
   <script>
-    // Minimal YAML -> Mermaid adapter (matches your current YAML fields)
+    // Tiny helper: read ?yaml=/states/TX.yaml (defaults to ./states/TX.yaml)
+    function yamlUrlFromQuery() {
+      const u = new URL(location.href);
+      return u.searchParams.get('yaml') || './states/TX.yaml';
+    }
+
+    // YAML -> Mermaid adapter (lanes + steps + edges)
     function toMermaid(data) {
       const byLane = {};
       (data.steps || []).forEach(s => {
         const lane = s.lane || s.lane_key || 'default';
         (byLane[lane] ||= []).push(s);
       });
+
       const laneTitle = k => ({ connect: "InsCipher Connect", state_portal: "State Portal" }[k] || k);
       const dir = data.direction || 'LR';
       const lines = [`flowchart ${dir}`];
 
-      // nodes by lane
+      // Nodes grouped by lane
       for (const [lane, steps] of Object.entries(byLane)) {
         lines.push(`  subgraph ${lane.toUpperCase()}[${laneTitle(lane)}]`);
         for (const s of steps) {
-          const label = (s.label || s.id).replace(/\[/g, '(').replace(/\]/g, ')');
+          const label = (s.label || s.id).replace(/\[/g, '(').replace(/\]/g, ')'); // avoid bracket collisions
           const node = s.type === 'decision' ? `${s.id}{${label}}` : `${s.id}[${label}]`;
           lines.push(`    ${node}`);
         }
         lines.push('  end');
       }
-      // edges
+
+      // Edges
       for (const s of (data.steps || [])) {
         if (s.type === 'decision') {
           if (s.yes_to) lines.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
@@ -54,36 +68,27 @@
     }
 
     async function main() {
-      const yamlUrl = './states/TX.yaml'; // tx.html in root, YAML in /states
+      const yamlUrl = yamlUrlFromQuery();
+      document.getElementById('src').textContent = yamlUrl;
+
       const res = await fetch(yamlUrl, { cache: 'no-store' });
       if (!res.ok) throw new Error(`Fetch failed (${res.status}) for ${yamlUrl}`);
       const text = await res.text();
 
       let data;
-      try {
-        data = jsyaml.load(text);
-      } catch (e) {
-        throw new Error('YAML parse error: ' + e.message + '\n---\n' + text.slice(0, 400));
-      }
+      try { data = jsyaml.load(text); }
+      catch (e) { throw new Error('YAML parse error: ' + e.message); }
 
       const mer = toMermaid(data);
-
-      // Initialize Mermaid and render to SVG explicitly
       mermaid.initialize({ startOnLoad: false });
-      const { svg } = await mermaid.render('txDiagram', mer);
+      const { svg } = await mermaid.render('diagram', mer);
       document.getElementById('chart').innerHTML = svg;
-
-      // Optional: show generated Mermaid for debugging
-      // document.getElementById('debug').innerHTML =
-      //  '<h3>Generated Mermaid</h3><pre>' +
-      //  mer.replace(/[&<>]/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[s])) +
-      //  '</pre>';
     }
 
     main().catch(err => {
       const c = document.getElementById('chart');
-      c.className = 'error';
-      c.textContent = 'Error loading diagram:\n' + err.message;
+      c.className = 'card error';
+      c.textContent = 'Error loading diagram: ' + err.message;
     });
   </script>
 </body>
