--- a/tx.html
+++ b/tx.html
@@ -2,117 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Texas Filing Flow</title>
+  <title>State Filing Flow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- libs -->
   <script src="https://cdn.jsdelivr.net/npm/js-yaml@4/dist/js-yaml.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
   <style>
-    :root { --card:#fff; --ink:#111; --muted:#666; --border:#e5e7eb; }
-    html,body { margin:0; padding:0; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:var(--ink); }
-    .wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-    h1 { font-size: 1.25rem; margin: 0 0 12px; font-weight: 600; }
-    .card { background: var(--card); border:1px solid var(--border); border-radius:12px; padding:16px; }
-    #chart svg { width: 100% !important; height: auto !important; }
-    .foot { margin-top:10px; color:var(--muted); font-size: .85rem; }
-    .error { color:#b00020; white-space: pre-wrap; }
+    :root { --ink:#373f51; --muted:#616161; --border:#e5e7eb; --card:#fff; }
+    html,body{margin:0;padding:0}
+    body{font-family: Tahoma, Arial, sans-serif; color:var(--ink); background:#fafafa}
+    .wrap{max-width:1100px;margin:24px auto;padding:0 16px}
+    h1{font-size:1.25rem;margin:0 0 12px;font-weight:700}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:16px}
+    #chart svg{width:100% !important;height:auto !important}
+    .foot{margin-top:8px;color:var(--muted);font-size:.85rem}
+    .error{color:#b00020;white-space:pre-wrap}
+    a{color:#009ddc;text-decoration:none}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Texas Filing Flow</h1>
+    <h1 id="title">Filing Flow</h1>
     <div id="chart" class="card">Loading…</div>
     <div class="foot">Source: <span id="src"></span></div>
   </div>
 
   <script>
-    // Tiny helper: read ?yaml=/states/TX.yaml (defaults to ./states/TX.yaml)
-    function yamlUrlFromQuery() {
-      const u = new URL(location.href);
-      return u.searchParams.get('yaml') || './states/TX.yaml';
+    // --- Mermaid init with InsCipher brand vibes ---
+    mermaid.initialize({
+      startOnLoad: false,
+      theme: "base",
+      flowchart: { useMaxWidth:true, curve:"basis", padding:12, htmlLabels:true },
+      themeVariables: {
+        fontFamily: 'Tahoma, Arial, sans-serif',
+        primaryColor: '#ffffff',     // node background
+        primaryTextColor: '#373f51', // dark navy text
+        primaryBorderColor: '#009ddc', // bright blue border
+        lineColor: '#616161',        // neutral gray edges
+        tertiaryColor: '#f04f23'     // accent orange
+      }
+    });
+
+    // --- Helpers ---
+    const qs = new URL(location.href).searchParams;
+    const yamlUrl = qs.get('yaml') || './states/TX.yaml';
+
+    function toTitle(data){
+      const st = data && (data.state || data.State || 'State');
+      return `${st} Filing Flow`;
     }
 
-    // YAML -> Mermaid adapter (lanes + steps + edges)
-   function toMermaid(data) {
-  const byLane = {};
-  (data.steps || []).forEach(s => {
-    const lane = s.lane || s.lane_key || 'default';
-    (byLane[lane] ||= []).push(s);
-  });
+    // YAML -> Mermaid with lanes, edges, and brand styling
+    function toMermaid(data) {
+      const byLane = {};
+      (data.steps || []).forEach(s => {
+        const lane = s.lane || s.lane_key || 'default';
+        (byLane[lane] ||= []).push(s);
+      });
+      const laneTitle = k => ({ connect:"InsCipher Connect", state_portal:"State Portal" }[k] || k);
+      const dir = data.direction || 'LR'; // set TB in YAML for vertical
+      const lines = [`flowchart ${dir}`];
 
-  const laneTitle = k => ({ connect: "InsCipher Connect", state_portal: "State Portal" }[k] || k);
-  const dir = data.direction || 'LR'; // use "TB" for vertical
-  const lines = [`flowchart ${dir}`];
+      // Lanes & nodes
+      for (const [lane, steps] of Object.entries(byLane)) {
+        const laneId = lane.toUpperCase();
+        lines.push(`  subgraph ${laneId}[${laneTitle(lane)}]`);
+        for (const s of steps) {
+          const label = (s.label || s.id).replace(/\[/g,'(').replace(/\]/g,')');
+          const node = s.type === 'decision' ? `${s.id}{${label}}` : `${s.id}[${label}]`;
+          lines.push(`    ${node}`);
+        }
+        lines.push('  end');
+      }
 
-  // lanes & nodes
-  for (const [lane, steps] of Object.entries(byLane)) {
-    const laneId = lane.toUpperCase(); // CONNECT / STATE_PORTAL
-    lines.push(`  subgraph ${laneId}[${laneTitle(lane)}]`);
-    for (const s of steps) {
-      const label = (s.label || s.id).replace(/\[/g,'(').replace(/\]/g,')');
-      const node = s.type === 'decision' ? `${s.id}{${label}}` : `${s.id}[${label}]`;
-      lines.push(`    ${node}`);
-    }
-    lines.push('  end');
-  }
+      // Edges
+      for (const s of (data.steps || [])) {
+        if (s.type === 'decision') {
+          if (s.yes_to) lines.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
+          if (s.no_to)  lines.push(`  ${s.id} -- No --> ${s.no_to}`);
+        } else if (s.next) {
+          lines.push(`  ${s.id} --> ${s.next}`);
+        }
+      }
 
-  // edges
-  for (const s of (data.steps || [])) {
-    if (s.type === 'decision') {
-      if (s.yes_to) lines.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
-      if (s.no_to)  lines.push(`  ${s.id} -- No --> ${s.no_to}`);
-    } else if (s.next) {
-      lines.push(`  ${s.id} --> ${s.next}`);
-    }
-  }
+      // Lane styles (soft backgrounds + brand borders)
+      lines.push(
+        'style CONNECT fill:#eef2ff,stroke:#009ddc,stroke-width:1.5px',
+        'style STATE_PORTAL fill:#ecfeff,stroke:#468c98,stroke-width:1.5px',
+        // Node classes
+        'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
+        'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
+        // Links
+        'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:.9'
+      );
+      (data.steps || []).forEach(s => lines.push(`class ${s.id} ${s.type === 'decision' ? 'decision':'action'}`));
 
-  // === InsCipher styling ===
-  lines.push(
-    // lane backgrounds & borders
-    'style CONNECT fill:#eef2ff,stroke:#009ddc,stroke-width:1.5px',
-    'style STATE_PORTAL fill:#ecfeff,stroke:#468c98,stroke-width:1.5px',
-
-    // node classes (Tahoma + brand colors)
-    'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
-    'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
-
-    // link styling
-    'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:0.9'
-  );
-
-  // apply classes per node type
-  (data.steps || []).forEach(s => {
-    const cls = s.type === 'decision' ? 'decision' : 'action';
-    lines.push(`class ${s.id} ${cls}`);
-  });
-
-  return lines.join('\n');
-}
-
+      return lines.join('\n');
     }
 
-    async function main() {
-      const yamlUrl = yamlUrlFromQuery();
+    async function main(){
       document.getElementById('src').textContent = yamlUrl;
-
       const res = await fetch(yamlUrl, { cache: 'no-store' });
-      if (!res.ok) throw new Error(`Fetch failed (${res.status}) for ${yamlUrl}`);
-      const text = await res.text();
+      if(!res.ok) throw new Error(`Fetch failed (${res.status}) for ${yamlUrl}`);
+      const raw = await res.text();
 
       let data;
-      try { data = jsyaml.load(text); }
-      catch (e) { throw new Error('YAML parse error: ' + e.message); }
+      try { data = jsyaml.load(raw); }
+      catch(e){ throw new Error('YAML parse error: ' + e.message); }
+
+      document.title = toTitle(data);
+      document.getElementById('title').textContent = toTitle(data);
 
       const mer = toMermaid(data);
-      mermaid.initialize({ startOnLoad: false });
       const { svg } = await mermaid.render('diagram', mer);
       document.getElementById('chart').innerHTML = svg;
     }
 
-    main().catch(err => {
+    main().catch(err=>{
       const c = document.getElementById('chart');
       c.className = 'card error';
-      c.textContent = 'Error loading diagram: ' + err.message;
+      c.textContent = 'Error loading diagram:\n' + err.message + '\n\nCheck your YAML path & syntax.';
     });
   </script>
 </body>
