--- a/tx.html
+++ b/tx.html
@@ -32,7 +32,7 @@
     mermaid.initialize({
       startOnLoad: false,
       theme: "base",
-      flowchart: { useMaxWidth:true, curve:"basis", padding:12, htmlLabels:true },
+      flowchart: { useMaxWidth:true, curve:"linear", padding:12, htmlLabels:true },
       themeVariables: {
         fontFamily: 'Tahoma, Arial, sans-serif',
         primaryColor: '#ffffff',     // node background
