--- a/tx.html
+++ b/tx.html
@@ -87,7 +87,7 @@
 
       // Lane styles (soft backgrounds + brand borders)
       lines.push(
-        'style CONNECT fill:#eef2ff,stroke:#009ddc,stroke-width:1.5px',
+        'style CONNECT fill:#373f51,stroke:#009ddc,stroke-width:1.5px',
         'style STATE_PORTAL fill:#ecfeff,stroke:#468c98,stroke-width:1.5px',
         // Node classes
         'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
