--- a/tx.html
+++ b/tx.html
@@ -37,7 +37,7 @@
         fontFamily: 'Tahoma, Arial, sans-serif',
         primaryColor: '#ffffff',     // node background
         primaryTextColor: '#373f51', // dark navy text
-        primaryBorderColor: '#009ddc', // bright blue border
+        primaryBorderColor: '#373f51', // 
         lineColor: '#616161',        // neutral gray edges
         tertiaryColor: '#f04f23'     // accent orange
       }
