--- a/tx.html
+++ b/tx.html
@@ -88,7 +88,7 @@
       // Lane styles (soft backgrounds + brand borders)
       lines.push(
         'style CONNECT fill:#eef2ff,stroke:#009ddc,stroke-width:1.5px',
-        'style STATE_PORTAL fill:#ecfeff,stroke:#468c98,stroke-width:1.5px',
+        'style STATE_PORTAL fill:#373f51,stroke:#468c98,stroke-width:1.5px',
         // Node classes
         'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
         'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
