--- a/tx.html
+++ b/tx.html
@@ -87,11 +87,11 @@
 
       // Lane styles (soft backgrounds + brand borders)
       lines.push(
-        'style CONNECT fill:#ffffff,stroke:#ffffff,stroke-width:1.5px',
+        'style CONNECT fill:#ffffff,stroke:#468c98,stroke-width:1.5px',
         'style STATE_PORTAL fill:#ffffff,stroke:#468c98,stroke-width:1.5px',
         // Node classes
-        'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
-        'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
+        'classDef action   fill:#ffffff,stroke:#373f51,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
+        'classDef decision fill:#fff7ed,stroke:#373f51,stroke-width:2px,color:#373f51,font-family:Tahoma',
         // Links
         'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:.9'
       );
