--- a/tx.html
+++ b/tx.html
@@ -17,7 +17,7 @@
     #chart svg{width:100% !important;height:auto !important}
     .foot{margin-top:8px;color:var(--muted);font-size:.85rem}
     .error{color:#b00020;white-space:pre-wrap}
-    a{color:#009ddc;text-decoration:none}
+    a{color:#373f51;text-decoration:none}
   </style>
 </head>
 <body>
