--- a/tx.html
+++ b/tx.html
@@ -87,8 +87,8 @@
 
       // Lane styles (soft backgrounds + brand borders)
       lines.push(
-        'style CONNECT fill:#ffffff,stroke:#468c98,stroke-width:1.5px',
-        'style STATE_PORTAL fill:#ffffff,stroke:#468c98,stroke-width:1.5px',
+        'style CONNECT fill:#d2d4d9,stroke:#468c98,stroke-width:1.5px',
+        'style STATE_PORTAL fill:##d2d4d9,stroke:#468c98,stroke-width:1.5px',
         // Node classes
         'classDef action   fill:#ffffff,stroke:#373f51,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
         'classDef decision fill:#fff7ed,stroke:#373f51,stroke-width:2px,color:#373f51,font-family:Tahoma',
