--- a/tx.html
+++ b/tx.html
@@ -90,7 +90,7 @@
         'style CONNECT fill:#d2d4d9,stroke:#468c98,stroke-width:1.5px',
         'style STATE_PORTAL fill:##d2d4d9,stroke:#468c98,stroke-width:1.5px',
         // Node classes
-        'classDef action   fill:#ffffff,stroke:#373f51,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
+        'classDef action   fill:#d2d4d9,stroke:#373f51,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
         'classDef decision fill:#fff7ed,stroke:#373f51,stroke-width:2px,color:#373f51,font-family:Tahoma',
         // Links
         'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:.9'
