--- a/tx.html
+++ b/tx.html
@@ -53,37 +53,62 @@
     }
 
     // YAML -> Mermaid with lanes, edges, and brand styling
-    function toMermaid(data) {
-      const byLane = {};
-      (data.steps || []).forEach(s => {
-        const lane = s.lane || s.lane_key || 'default';
-        (byLane[lane] ||= []).push(s);
-      });
-      const laneTitle = k => ({ connect:"InsCipher Connect", state_portal:"State Portal" }[k] || k);
-      const dir = data.direction || 'LR'; // set TB in YAML for vertical
-      const lines = [`flowchart ${dir}`];
+   function toMermaid(data) {
+  const byLane = {};
+  (data.steps || []).forEach(s => {
+    const lane = s.lane || s.lane_key || 'default';
+    (byLane[lane] ||= []).push(s);
+  });
 
-      // Lanes & nodes
-      for (const [lane, steps] of Object.entries(byLane)) {
-        const laneId = lane.toUpperCase();
-        lines.push(`  subgraph ${laneId}[${laneTitle(lane)}]`);
-        for (const s of steps) {
-          const label = (s.label || s.id).replace(/\[/g,'(').replace(/\]/g,')');
-          const node = s.type === 'decision' ? `${s.id}{${label}}` : `${s.id}[${label}]`;
-          lines.push(`    ${node}`);
-        }
-        lines.push('  end');
-      }
+  const laneTitle = k => ({ connect: "InsCipher Connect", state_portal: "State Portal" }[k] || k);
+  const dir = data.direction || 'LR'; // use TB for vertical
+  const lines = [`flowchart ${dir}`];
 
-      // Edges
-      for (const s of (data.steps || [])) {
-        if (s.type === 'decision') {
-          if (s.yes_to) lines.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
-          if (s.no_to)  lines.push(`  ${s.id} -- No --> ${s.no_to}`);
-        } else if (s.next) {
-          lines.push(`  ${s.id} --> ${s.next}`);
-        }
-      }
+  // Lanes & nodes
+  for (const [lane, steps] of Object.entries(byLane)) {
+    const laneId = lane.toUpperCase();
+    lines.push(`  subgraph ${laneId}[${laneTitle(lane)}]`);
+    for (const s of steps) {
+      const label = (s.label || s.id).replace(/\[/g,'(').replace(/\]/g,')');
+      const node = s.type === 'decision' ? `${s.id}{${label}}` : `${s.id}[${label}]`;
+      lines.push(`    ${node}`);
+    }
+    lines.push('  end');
+  }
+
+  // Edges
+  for (const s of (data.steps || [])) {
+    if (s.type === 'decision') {
+      if (s.yes_to) lines.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
+      if (s.no_to)  lines.push(`  ${s.id} -- No --> ${s.no_to}`);
+    } else if (s.next) {
+      lines.push(`  ${s.id} --> ${s.next}`);
+    }
+  }
+
+  // === Neutral lane styling + branded nodes ===
+  lines.push(
+    // lane backgrounds = neutral gray, not purple/blue
+    'style CONNECT fill:#f8f9fa,stroke:#009ddc,stroke-width:1.5px',
+    'style STATE_PORTAL fill:#f8f9fa,stroke:#468c98,stroke-width:1.5px',
+
+    // node classes
+    'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
+    'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
+
+    // link style
+    'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:0.9'
+  );
+
+  // Apply node classes
+  (data.steps || []).forEach(s => {
+    const cls = s.type === 'decision' ? 'decision' : 'action';
+    lines.push(`class ${s.id} ${cls}`);
+  });
+
+  return lines.join('\n');
+}
+
 
       // Lane styles (soft backgrounds + brand borders)
       lines.push(
