--- a/tx.html
+++ b/tx.html
@@ -87,10 +87,10 @@
 
       // === Neutral lane styling + branded nodes ===
       lines.push(
-        'style CONNECT fill:#f8f9fa,stroke:#009ddc,stroke-width:1.5px',
+        'style CONNECT fill:#f8f9fa,stroke:#373f51,stroke-width:1.5px',
         'style STATE_PORTAL fill:#f8f9fa,stroke:#468c98,stroke-width:1.5px',
 
-        'classDef action   fill:#ffffff,stroke:#009ddc,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
+        'classDef action   fill:#ffffff,stroke:#373f51,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
         'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
 
         'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:0.9'
