--- a/tx.html
+++ b/tx.html
@@ -117,6 +117,11 @@
       document.getElementById('title').textContent = toTitle(data);
 
       const mer = toMermaid(data);
+      console.log(mer);
+document.body.insertAdjacentHTML('beforeend', '<pre style="white-space:pre-wrap;margin:16px">'+
+  mer.replace(/&/g,'&amp;').replace(/</g,'&lt;')+
+'</pre>');
+
       const { svg } = await mermaid.render('diagram', mer);
       document.getElementById('chart').innerHTML = svg;
     }
