--- a/tx.html
+++ b/tx.html
@@ -92,8 +92,8 @@
       lines.push(
         'style CONNECT fill:#f8f9fa,stroke:#4f46e5,stroke-width:1.5px',
         'style STATE_PORTAL fill:#f8f9fa,stroke:#468c98,stroke-width:1.5px',
-        'classDef action   fill:#ffffff,stroke:#4f46e5,stroke-width:1.5px,color:#373f51,font-family:Tahoma',
-        'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51,font-family:Tahoma',
+        classDef action   fill:#ffffff,stroke:#4f46e5,stroke-width:1.5px,color:#373f51
+        classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#373f51
         'linkStyle default stroke:#616161,stroke-width:1.5px,opacity:0.9'
       );
       (data.steps || []).forEach(s => {
